// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NewEntity.vue enter in adding mode set textSelected renders correctly 1`] = `
<form>
  <bh-button-stub type="button" rounded="true"><span><span>Add new entity</span> <span>for "douglas"</span></span>
    <bh-icon-stub value="plus-circle"></bh-icon-stub>
  </bh-button-stub>
</form>
`;

exports[`NewEntity.vue renders correctly 1`] = `
<form>
  <bh-button-stub type="button" rounded="true" tooltiphover="Highlight words to mark as entity"><span><span>Add new entity</span>
    <!----></span>
    <bh-icon-stub value="plus-circle"></bh-icon-stub>
  </bh-button-stub>
</form>
`;
